# varProj-gtsam

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Optimization/: CMakeLists.txt
Preconditioners/: CMakeLists.txt
cpp/: CMakeLists.txt  CertifiableLandmark.h  CertifiablePGO.h  CertifiableProblemOpts.h  CertifiableRA.h  CertifiableRangeSLAM.h  CertifiableResults.h  Certifiable_Incremental_PGO.h  Certifiable_problem.h  ConcurrentCertifiableBatchSmoother.cpp  ConcurrentCertifiableBatchSmoother.h  LandmarkFactor.cpp  LandmarkFactor.h  LiftedPose.h  LiftedPosePriorFactor.cpp  LiftedPosePriorFactor.h  LiftedRangeFactor.cpp  LiftedRangeFactor.h  NormalRangeFactor.cpp  NormalRangeFactor.h  RaFactor.cpp  RaFactor.h  RelativePoseMeasurement.h  RunSAM.h  SEsyncFactor.cpp  SEsyncFactor.h  StiefelManifold-inl.h  StiefelManifold.h  StiefelManifoldPriorFactor.cpp  StiefelManifoldPriorFactor.h  UnitSphere.h  types.h  utils.cpp  utils.h
cpp/examples/: BA_example.cpp  RASLAM_example.cpp  SESync_example.cpp  SNL_example.cpp  ScaledStiefelBA_example.cpp  ScaledStiefel_example.cpp
cpp/tests/: CMakeLists.txt  testDataMatrix.cpp  testLandmarkFactor.cpp  testLiftedPose.cpp  testLiftedRangeFactor.cpp  testNormalRangeFactor.cpp  testPriorFactor.cpp  testRaFactor.cpp  testSEsyncFactor.cpp  testStiefelManifold.cpp
data/pgo/: run_pgo.sh
data/pgo/M3500/: results.json  run_M3500.sh
data/pgo/MIT/: results.json  run_MIT.sh
data/pgo/city10000/: results.json  run_city10000.sh
data/pgo/grid3D/: results.json  run_grid3D.sh
data/pgo/intel/: results.json  run_intel.sh
data/pgo/parking-garage/: results.json  run_parking-garage.sh
data/pgo/sphere2500/: results.json  run_sphere2500.sh
data/pgo/torus3D/: results.json  run_torus3D.sh
data/raslam/: run_raslam.sh
data/raslam/mit_outfinite/: results.json  run_mit_outfinite.sh
data/raslam/mrclam/: run_mrclam.sh
data/raslam/mrclam/mrclam2/: run_mrclam2.sh
data/raslam/mrclam/mrclam4/: run_mrclam4.sh
data/raslam/mrclam/mrclam6/: run_mrclam6.sh
data/raslam/mrclam/mrclam7/: run_mrclam7.sh
data/raslam/mrclam2/: results.json  run_mrclam2.sh
data/raslam/mrclam4/: results.json  run_mrclam4.sh
data/raslam/mrclam6/: results.json  run_mrclam6.sh
data/raslam/mrclam7/: results.json  run_mrclam7.sh
data/raslam/plaza1/: results.json  run_plaza1.sh
data/raslam/plaza2/: results.json  run_plaza2.sh
data/raslam/single_drone/: results.json  run_single_drone.sh  run_singledrone.bash
data/raslam/tiers/: results.json  run_tiers.bash  run_tiers.sh
data/sfm/: check_overflow_nan.py  run_sfm.sh
data/sfm/IMC-gate/: results.json  run_IMC-gate.sh
data/sfm/IMC-rome/: run_IMC-rome.sh
data/sfm/IMC-temple/: run_IMC-temple.sh
data/sfm/MipNerf-garden/: results.json  run_MipNerf-garden.sh
data/sfm/MipNerf-kitchen/: results.json  run_MipNerf-kitchen.sh
data/sfm/MipNerf-room/: results.json  run_MipNerf-room.sh
data/sfm/Replica-REPoffice0/: run_Replica-REPoffice0.sh
data/sfm/Replica-REPoffice0/cached_results/: results_rank5_ExplicitVarPro_init1.json  results_rank5_ExplicitVarPro_init2.json  results_rank5_ExplicitVarPro_init3.json  results_rank5_ExplicitVarPro_init4.json  results_rank5_ExplicitVarPro_init5.json  results_rank5_Explicit_init1.json  results_rank5_Explicit_init2.json  results_rank5_Explicit_init3.json  results_rank5_Explicit_init4.json  results_rank5_Explicit_init5.json  results_rank5_Implicit_init1.json  (+4 more)
data/sfm/Replica-REPoffice0_100/: results.json  run_Replica-REPoffice0_100.sh
data/sfm/Replica-REPoffice1/: run_Replica-REPoffice1.sh
data/sfm/Replica-REPoffice1_100/: results.json  run_Replica-REPoffice1_100.sh
data/sfm/Replica-REProom0/: run_Replica-REProom0.sh
data/sfm/Replica-REProom0_100/: results.json  run_Replica-REProom0_100.sh
data/sfm/Replica-REProom1/: run_Replica-REProom1.sh
data/sfm/Replica-REProom1_100/: results.json  run_Replica-REProom1_100.sh
data/sfm/TUM-computer-R/: results.json  run_TUM-computer-R.sh
data/sfm/TUM-computer-T/: run_TUM-computer-T.sh
data/sfm/TUM-desk/: run_TUM-desk.sh
data/sfm/TUM-room/: run_TUM-room.sh
data/sfm/bal-1934/: run_bal-1934.sh
data/sfm/bal-392/: results.json  run_bal-392.sh
data/sfm/bal-93/: results.json  run_bal-93.sh
data/snl/: run_snl.sh
data/snl/M3500_snl/: results.json  run_M3500_snl.sh
data/snl/MIT_snl/: results.json  run_MIT_snl.sh
data/snl/city10000_snl/: results.json  run_city10000_snl.sh
data/snl/grid3D_snl/: results.json  run_grid3D_snl.sh
data/snl/intel_snl/: results.json  run_intel_snl.sh
data/snl/parking-garage_snl/: results.json  run_parking-garage_snl.sh
data/snl/sphere2500_snl/: results.json  run_sphere2500.sh  run_sphere2500_snl.sh
data/snl/torus3D_snl/: results.json  run_torus3D_snl.sh
scripts/: run_RA_example.sh  run_Range_example.sh  run_SEsync_example.sh
(+25 files in other folders)
